hphp/hack/test/typecheck/expression_trees/invalid_operator.php.exp
File "invalid_operator.php", line 15, characters 13-18:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 18, characters 13-22:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 19, characters 13-21:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 22, characters 13-20:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 25, characters 13-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 28, characters 22-35:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 31, characters 14-15:
Unsupported syntax for expression trees. (Parsing[1002])
